<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="25sp"
            android:layout_height="34dp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="50sp"
            android:gravity="center_vertical"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/SignUp"
            android:textColor="@color/Theme"
            android:textSize="25sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/Name"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:hint="@string/Name_hint"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/Email"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:hint="@string/Email_hint"
        android:textColorHint="@color/black"
        android:textSize="13sp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/Gender"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">>
    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Male" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Female" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:layout_marginTop="2sp"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="5sp"
        android:textColorHint="@color/black"
        android:hint="@string/password_hint"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:text="@string/Confirm_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="5sp"
        android:textColorHint="@color/black"
        android:hint="@string/Confirm_password_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="300sp"
        android:layout_height="45sp"
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/White"
        android:textAllCaps="false"
        android:text="@string/SignUp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="50sp"
        android:text="@string/already"
        android:textColor="@color/Purple"
        android:textStyle="bold"/>


</LinearLayout>