<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="25sp"
            android:layout_height="34dp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="50sp"
            android:gravity="center_vertical"
            android:src="@drawable/back" />

        <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50sp"
                android:textColor="@color/Theme"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/Login"/>
    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="250sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:text="@string/Email" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="13sp"
        android:textColorHint="@color/black"
        android:hint="@string/Email_hint"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="10sp"
        android:textColorHint="@color/black"
        android:hint="@string/password_hint"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="300sp"
        android:layout_height="45sp"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/White"
        android:textAllCaps="false"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="40sp"
        android:text="@string/not_member_sign_up"
        android:textColor="@color/Purple"
        android:textStyle="bold"
        android:textSize="12sp"/>

</LinearLayout>